	* optimized disk cache
	* optimized .torrent file parsing
	* optimized initialization of storage when adding a torrent
	* added support for adding torrents asynchronously (for improved startup performance)
	* added support for asynchronous disk I/O
	* almost completely changed the storage interface (for custom storage)
	* added support for hashing pieces in multiple threads

	* fixed piece sorting bug of deadline pieces
	* fixed python binding build on Mac OS and BSD
	* fixed UNC path normalization (on windows, unless UNC paths are disabled)
	* fixed possible crash when enabling multiple connections per IP
	* fixed typo in win vista specific code, breaking the build
	* change default of rate_limit_utp to true
	* fixed DLL export issue on windows (when building a shared library linking statically against boost)
	* fixed FreeBSD build
	* fixed web seed performance issue whith pieces > 1 MiB
	* fixed unchoke logic when using web seeds
	* fixed compatibility with older versions of boost (down to boost 1.40)

0.16 release

	* support torrents with more than 262000 pieces
	* make tracker back-off configurable
	* don't restart the swarm after downloading metadata from magnet links
	* lower the default tracker retry intervals
	* support banning web seeds sending corrupt data
	* don't let hung outgoing connection attempts block incoming connections
	* improve SSL torrent support by using SNI and a single SSL listen socket
	* improved peer exchange performance by sharing incoming connections which advertize listen port 
	* deprecate set_ratio(), and per-peer rate limits
	* add web seed support for torrents with pad files
	* introduced a more scalable API for torrent status updates (post_torrent_updates()) and updated client_test to use it
	* updated the API to add_torrent_params turning all bools into flags of a flags field
	* added async_add_torrent() function to significantly improve performance when
	  adding many torrents