@@ -12,6 +12,7 @@
 	* almost completely changed the storage interface (for custom storage)
 	* added support for hashing pieces in multiple threads
 
+	* fixed semantics of rate_limit_utp to also ignore per-torrent limits
 	* fixed piece sorting bug of deadline pieces
 	* fixed python binding build on Mac OS and BSD
 	* fixed UNC path normalization (on windows, unless UNC paths are disabled)
